cyclonedx-bom/src/specs/v1_7/snapshots/cyclonedx_bom__specs__v1_7__evidence__test__it_should_write_xml_occurrences.snap
---
source: cyclonedx-bom/src/specs/v1_7/evidence.rs
assertion_line: 485
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<occurrences>
  <occurrence bom-ref="occurrence-1">
    <location>location-1</location>
  </occurrence>
</occurrences>
